--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -161,8 +161,7 @@
              </header>
              <div class="outer">
              <!--Logo-->
-                <div class="inner-circle"><a href="index-2.html"><img class="phone" src="../../../../../Downloads/Appo-tempate/HTML/images/app-design.png" alt="image"></a></div>
-              
+                <div class="inner-circle"><a href="index-2.html"><% image_tag "app-design.png", class: "phone"%></a></div>
                 <div class="row clearfix">
                   <!--Left Column-->
                    <div class="left-column col-lg-4 col-md-6 col-sm-6 col-xs-12">
