--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../../../../../Downloads/Appo-tempate/HTML/images/logo.png" alt="logo">Appo</a>
+              <a class="navbar-brand" href="#"><img src="../../../../../Downloads/Appo-tempate/HTML/images/logo.png" alt="logo">Myvita</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar">
               <ul class="nav navbar-nav navbar-right">
@@ -82,17 +82,16 @@
 				<div class="header-4-content row">
 
 	              <div class="col-md-7 col-sm-12">
-	                <h1 class="has-line mt-63 mb-20">Best App Landing Page in the market Available now</h1>
-	                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	                tempor incididunt ut labore et dolore magna aliqua.</p> 
+	                <h1 class="has-line mt-63 mb-20">Myvita: 나만을 위해 제작된 맞춤형 비타민을 만나보세요</h1>
+	                <p class="lead">Myvita는 다양한 방법을 통해 현 상태에서 필요한 성분이 무엇인지 파악하고, 이에 맞춘 개인별 맞춤형 비타민을 제공합니다. 더 이상 불편하게 여러 비타민을 복용하지 마시고, 효율적으로 필요한 성분만 담긴 나만의 비타민 한 알로 해결하세요!
+                  </p>
 	                <div class="download">
-	                  <a href="#" class="download-btn"><i class="fa fa-android"></i> Google Store</a>
-	                  <a href="#" class="download-btn"><i class="fa fa-apple"></i> Apple Store</a>
+	                  <a href="#" class="download-btn"><i class="fa fa-android"></i> 나만의 비타민 만들기</a>
+	                  <a href="#" class="download-btn"><i class="fa fa-apple"></i> 1:1 문의하기</a>
 	                </div>
 	              </div>
 
-	              <div class="col-md-5 hidden-sm hidden-xs mt-63">
-	               <img src="../../../../../Downloads/Appo-tempate/HTML/images/header-images/demo-11-img.png" class="demo-5-img" alt="image">
+	              <div class="col-md-5 hidden-sm hidden-xs mt-63"><%= image_tag 'Home1.png', class: "demo-5-img"%>
 	              </div>
 
 	            </div>
@@ -111,33 +110,33 @@
           <div class="container">
             <header class="text-center mb-70">
               <h2 class="with-bg-text has-line-center">
-                <span class="heading-bg-text">About</span>What is Appo App
+                <span class="heading-bg-text">About</span>MyVita 란?
               </h2>
             </header>
             <div class="row">
               <!-- start img-->
               <div class="col-md-6 col-sm-12">
-                <img src="../../../../../Downloads/Appo-tempate/HTML/images/about-img-2.png" class="center-block" alt="image">
+                <%= image_tag 'About1.png', class: 'center-block' %>
               </div>
 
               <!-- start skills-->
               <div class="col-md-6 col-sm-12">
-                <h2 class="has-line">Everything you need and more in one place</h2>
-                <p class="lead mb-20">Lorem ipsum dolor sit ametestet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation</p>
+                <h2 class="has-line">지금 내 몸이 필요로 하는 영양소만으로 이루어진 나만의 비타민
+                </h2>
+                <p class="lead mb-20">사람들은 각자의 체질, 생활패턴, 식습관 등 여러가지 요소에 따라 필요로 하는 영양소가 달라지게 됩니다. 하지만 이를 위한 맞춤형 상품은 찾기 어렵고, 시중에서 일괄적으로 판매되고 있는 종합비타민을 먹거나 종류별로 여러 비타민을 사서 섭취해야 하는 불편함이 존재합니다. 이제 더 이상 그럴 필요 없이 내 상황에 맞춰진 맞춤형 비타민, Myvita를 이용하세요.
+                </p>
                 
                 <ul class="s-list list-unstyled mb-20">
-                  <li><span class="fa fa-check"></span>Donec facilisis velit eu est phasellus consequat quis nostrud</li>
-                  <li><span class="fa fa-check"></span>Aenean vitae quam. Vivamus et nunc nunc conseq</li>
-                  <li><span class="fa fa-check"></span>Sem vel metus imperdiet lacinia enean </li>
-                  <li><span class="fa fa-check"></span>Dapibus aliquam augue fusce eleifend quisque tels</li>
-                  <li><span class="fa fa-check"></span>Dapibus aliquam augue fusce tels</li>
+                  <li><span class="fa fa-check"></span>식약청에서 허가된 영양소만을 사용합니다</li>
+                  <li><span class="fa fa-check"></span>자체 알고리즘을 통해 간편하게 진단을 받으실 수 있습니다</li>
+                  <li><span class="fa fa-check"></span>주기 별로 재진단을 실시하여 지속적으로 최신화된 비타민을 받으실 수 있습니다</li>
+                  <li><span class="fa fa-check"></span>여러 영양제를 구매함으로 오는 비용적인 부담을 덜 수 있습니다</li>
+                  <li><span class="fa fa-check"></span>기간에 따라 추가 할인을 받으실 수 있습니다</li>
                 </ul>
 
                 <div class="download">
-                  <a href="#" class="download-btn"><i class="fa fa-android"></i> Google Store</a>
-                  <a href="#" class="download-btn"><i class="fa fa-apple"></i> App Store</a>
+                  <a href="#" class="download-btn"><i class="fa fa-android"></i> 나만의 비타민 만들기</a>
+                  <a href="#" class="download-btn"><i class="fa fa-apple"></i> 비타민 별 효능 알아보기</a>
                 </div>
 
               </div>
@@ -156,12 +155,12 @@
           <div class="container text-center">
              <header class="text-center mb-70">
                 <h2 class="with-bg-text has-line-center">
-                   <span class="heading-bg-text">Services</span>What we deliver 
+                   <span class="heading-bg-text">Services</span>Myvita에서 느껴보세요!
                 </h2>
              </header>
              <div class="outer">
              <!--Logo-->
-                <div class="inner-circle"><a href="index-2.html"><% image_tag "app-design.png", class: "phone"%></a></div>
+                <div class="inner-circle"><a href="index-2.html"><% image_tag "Services1.png", class: "phone"%></a></div>
                 <div class="row clearfix">
                   <!--Left Column-->
                    <div class="left-column col-lg-4 col-md-6 col-sm-6 col-xs-12">
@@ -170,8 +169,9 @@
                       <div class="service-box-three">
                           <div class="inner-box">
                               <div class="icon-box"><span class="flaticon-layers"></span></div>
-                              <h3><a href="services-single.html">Insurance Planning</a></h3>
-                              <div class="text"> Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. </div>
+                              <h3><a href="services-single.html">복용하기 쉬운 캡슐형 영양제, Myvita</a></h3>
+                              <div class="text">시중에 나와 있는 수 많은 영양보조제, 일일이 찾아 먹기에는 귀찮고 번거로웠던 것이 사실입니다. Myvita는 고객님의 영양 상태에 대한 정확한 진단을 바탕으로 고객님만을 위한 단 하나의 캡슐을 제공합니다. 하루 한 알, 한 달 분량이 제공되는 키트를 통해 간편하고 정확한 영양 관리를 받아보세요.
+                              </div>
                           </div>
                       </div>
                       
@@ -179,8 +179,9 @@
                       <div class="service-box-three">
                           <div class="inner-box">
                               <div class="icon-box"><span class="flaticon-picasa"></span></div>
-                              <h3><a href="services-single.html">Retirement Planning</a></h3>
-                              <div class="text"> Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. </div>
+                              <h3><a href="services-single.html">정확한 영양 상태 체크 시스템</a></h3>
+                              <div class="text"> Myvita를 통해 개인에게 꼭 맞는 영양소를 흡수하기 위해서는 정확한 영양 상태 검진이 필요합니다. Myvita는 두 가지 트랙으로 고객님의 영양 상태를 정확하게 파악할 수 있습니다. 정교한 알고리즘을 통해 간단한 설문만으로 영양 상태를 파악할 수 있습니다. 여기에 추가적으로 머리카락 검사를 통해서 완벽하게 고객님의 상태를 파악할 수 있습니다.
+                              </div>
                           </div>
                       </div>
                       
@@ -188,8 +189,9 @@
                       <div class="service-box-three">
                           <div class="inner-box">
                               <div class="icon-box"><span class="flaticon-archives"></span></div>
-                              <h3><a href="services-single.html">Investment Planning</a></h3>
-                              <div class="text"> Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. </div>
+                              <h3><a href="services-single.html">지속적인 관리를 통한 영양 추적 시스템</a></h3>
+                              <div class="text"> 사람의 몸은 수시로 변하게 마련입니다. 고객님의 식습관이 변하거나 생활패턴이 변화하면 영양 상태도 수시로 변할 수 있습니다. Myvita는 주기적인 재측정을 통해 시시각각으로 변하는 고객님의 영양 상태를 추적하여 언제나 최적의 몸 상태를 유지할 수 있도록 노력합니다.
+                              </div>
                           </div>
                       </div>
                       
@@ -202,17 +204,18 @@
                       <div class="service-box-four">
                           <div class="inner-box">
                               <div class="icon-box"><span class="flaticon-bar-chart-1"></span></div>
-                              <h3><a href="services-single.html">Commodities Training</a></h3>
-                              <div class="text"> Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. </div>
+                              <h3><a href="services-single.html">국내 최초 영양제 구독 시스템</a></h3>
+                              <div class="text"> Myvita는 커스터마이징 영양제와 더불어 추가적인 영양소에 대한 정기 구독 시스템을 실시하고 있습니다. 고객님께서 원하시는 추가적인 영양소가 있다면 구독을 통해 정기적으로 영양제를 받아보며 더욱 건강한 몸에 한 걸음 더 다가갈 수 있습니다.
+                              </div>
                           </div>
-                      </div>
                       
                       <!--Service Box-->
                       <div class="service-box-four">
                           <div class="inner-box">
                               <div class="icon-box"><span class="flaticon-business-4"></span></div>
-                              <h3><a href="services-single.html">Mutual Funds</a></h3>
-                              <div class="text"> Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. </div>
+                              <h3><a href="services-single.html">수험생을 위한 최적의 영양제, Myvita</a></h3>
+                              <div class="text"> 대입 수험생, 공무원 시험 준비생 등 다양한 수험생의 부모님들의 부담을 덜어드리고자 Myvita에서 준비한 영양 지원 서비스! Myvita의 수험생 전용 서비스를 신청하시면 부모님들께서 별도로 자녀를 위한 영양제품을 준비할 필요 없이 최고의 제품으로 구성된 패키지를 매달 제공합니다.
+                              </div>
                           </div>
                       </div>
                       
@@ -266,7 +269,7 @@
           <div class="container">
              <header class="text-center mb-70">
                 <h2 class="with-bg-text has-line-center">
-                   <span class="heading-bg-text">FAQ</span>Have question about us?
+                   <span class="heading-bg-text">FAQ</span>My Vita에 대해 궁금하신 점이 있으신가요?
                 </h2>
              </header>
              <div class="row">
@@ -284,34 +287,46 @@
                   
                       <!--Block-->
                       <li class="accordion block active-block">
-                          <div class="acc-btn active"><div class="icon-outer"><span class="icon fa fa-plus"></span></div> ABOUT Appo</div>
+                          <div class="acc-btn active"><div class="icon-outer"><span class="icon fa fa-plus"></span></div> My Vita는 어떤 서비스 인가요?
+                          </div>
                           <div class="acc-content current">
-                              <div class="content"><p>Organically grow the holistic world view of disruptive innovation via work place diversity and empowerment.Capitalise on low hanging fruit to identify ballpark value added activity to beta test. The Dyna mically procrastinate users after installed base benefits grow the holistic world view of disruptive The Dyna mically procrastinate users after installed base benefits grow the holistic world.</p></div>
+                              <div class="content"><p> My Vita는 다양한 방법을 통해 현 상태에서 필요한 성분이 무엇인지 파악하고, 이에 맞춘 개인별 맞춤형 비타민을 제공하는 서비스입니다. 더 이상 불편하게 여러 비타민을 복용하지 마시고, 효율적으로 필요한 성분만 담긴 나만의 비타민 한 알로 해결하세요!
+                              </p></div>
                           </div>
                       </li>
 
                       <!--Block-->
                       <li class="accordion block">
-                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> OUR MISSION</div>
+                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> 서비스를 이용하고 싶습니다. 어떻게 서비스를 신청할 수 있나요?
+                          </div>
                           <div class="acc-content">
-                              <div class="content"><p>Organically grow the holistic world view of disruptive innovation via work place diversity and empowerment.Capitalise on low hanging fruit to identify ballpark value added activity to beta test. The Dyna mically procrastinate users after installed base benefits grow the holistic world view of disruptive The Dyna mically procrastinate users after installed base benefits grow the holistic world.</p></div>
+                              <div class="content"><p>홈페이지 및 어플리케이션을 통해 서비스를 신청하실 수 있습니다.
+                                간단한 인증절차 후 가입이 완료되면 자신의 건강 정보를 입력하실 수 있습니다.
+                                이후 선호하는 영양성분을 추가하시고 영양제 구독 주기를 입력하시고 결제까지 완료하시면
+                                당신만을 위한 영양제가 고객님을 찾아갑니다.</p><br><p>
+                                (2~3일 정도 소요 / 도서, 산간지방의 경우 하루정도 더 소요됩니다. )
+                              </p></div>
                           </div>
                       </li>
                       
                       <!--Block-->
                       <li class="accordion block">
-                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> OUR GOALS  </div>
-                          <div class="acc-content">
-                              <div class="content"><p>Organically grow the holistic world view of disruptive innovation via work place diversity and empowerment.Capitalise on low hanging fruit to identify ballpark value added activity to beta test. The Dyna mically procrastinate users after installed base benefits grow the holistic world view of disruptive The Dyna mically procrastinate users after installed base benefits grow the holistic world.</p></div>
+                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> 서비스의 구독 주기는 어떻게 되나요
                           </div>
+                          <div class="acc-content">
+                              <div class="content"><p>고객님의 선호 주기에 따라 1주일 주기부터 3개월 주기까지 선택 가능합니다.
+                                고객님의 영양상태에 적합한 영양제를 제공하기 위해 2주정도의 구독 주기를 추천드립니다.
+                              </p></div>
                       </li>
 
                       <!--Block-->
                       <li class="accordion block">
-                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> OUR TARGET  </div>
-                          <div class="acc-content">
-                              <div class="content"><p>Organically grow the holistic world view of disruptive innovation via work place diversity and empowerment.Capitalise on low hanging fruit to identify ballpark value added activity to beta test. The Dyna mically procrastinate users after installed base benefits grow the holistic world view of disruptive The Dyna mically procrastinate users after installed base benefits grow the holistic world.</p></div>
+                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> 서비스를 중단하고 싶습니다. 어떻게 하면 되나요?
                           </div>
+                          <div class="acc-content">
+                              <div class="content"><p>홈페이지 및 어플리케이션 내 [내 정보]하단의 구독 취소 탭을 이용하시면 됩니다.
+                                (다만, 현재 제작 및 배송이 완료된 제품에 대해서는 결제가 이루어짐을 알려드립니다.)
+                              </p></div>
                       </li>
 
                       <!--Block-->
