--- a/app/assets/stylesheets/flaticon.css
+++ b/app/assets/stylesheets/flaticon.css
@@ -1,11 +1,11 @@
 
 @font-face {
   font-family: "Flaticon";
-  src: url("../fonts/flaticon.eot");
-  src: url("../fonts/flaticond41d.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/flaticon.woff") format("woff"),
-       url("../fonts/flaticon.ttf") format("truetype"),
-       url("../fonts/flaticon.svg#Flaticon") format("svg");
+  src: url("../../../public/fonts/flaticon.eot");
+  src: url("../../../public/fonts/flaticond41d.eot?#iefix") format("embedded-opentype"),
+       url("../../../public/fonts/flaticon.woff") format("woff"),
+       url("../../../public/fonts/flaticon.ttf") format("truetype"),
+       url("../../../public/fonts/flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Flaticon";
-    src: url("../fonts/flaticon.svg#Flaticon") format("svg");
+    src: url("../../../public/fonts/flaticon.svg#Flaticon") format("svg");
   }
 }
 
