--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,8 +10,11 @@
 
       <!-- Favicon -->
 
-      <link rel="shortcut icon" href="app/assets/images/favicon.ico">
+      <link rel="shortcut icon" href="<% asset_url 'favicon.ico'%>">
       <!-- Bootstrap Stylesheet -->
+
+
+     <% javascript_include_tag "jquery.min"%>
 
 
       <% stylesheet_link_tag "bootstrap" %>
@@ -49,7 +52,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../../../../../Downloads/Appo-tempate/HTML/images/logo.png" alt="logo">Myvita</a>
+              <a class="navbar-brand" href="#"><img src="logo.png" alt="logo">Myvita</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar">
               <ul class="nav navbar-nav navbar-right">
@@ -232,7 +235,7 @@
                   
                 </div>
              </div>
-
+             </div>
           </div>
         </section>
         <!-- ======================================= 
@@ -311,12 +314,12 @@
                       
                       <!--Block-->
                       <li class="accordion block">
-                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> 서비스의 구독 주기는 어떻게 되나요
-                          </div>
+                          <div class="acc-btn"><div class="icon-outer"><span class="icon fa fa-plus"></span> </div> 서비스의 구독 주기는 어떻게 되나요 </div>
                           <div class="acc-content">
                               <div class="content"><p>고객님의 선호 주기에 따라 1주일 주기부터 3개월 주기까지 선택 가능합니다.
                                 고객님의 영양상태에 적합한 영양제를 제공하기 위해 2주정도의 구독 주기를 추천드립니다.
                               </p></div>
+                          </div>
                       </li>
 
                       <!--Block-->
@@ -327,6 +330,7 @@
                               <div class="content"><p>홈페이지 및 어플리케이션 내 [내 정보]하단의 구독 취소 탭을 이용하시면 됩니다.
                                 (다만, 현재 제작 및 배송이 완료된 제품에 대해서는 결제가 이루어짐을 알려드립니다.)
                               </p></div>
+                          </div>
                       </li>
 
                       <!--Block-->
